# eveindyapp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
migrations/: env.py
migrations/versions/: 16de3629350e_add_token_refresh_failed_to_user.py  504a1768cdd1_add_adjusted_price_to_cached_market_data.py  5518ca403ace_auto.py  6e6bb2139b63_auto.py  7d4ce2fe50f9_auto.py  abbdfb594ac1_auto.py  b427b3697797_auto.py  e46d36f74e5c_auto.py  e651cd9d26dd_add_user_config_table.py  f1a435c12bb6_add_main_character_id_to_user.py
src/: application.py  auth.py  celery_app.py  config.py  constants.py  industry.py  industry_constants.py  industry_utils.py  lookups.py  main.py  tasks.py  user.py  utils.py
src/models/: base_sde_models.py  models.py
src/templates/: base.html  blueprint_materials.html  blueprints.html  calculator.html  config.html  index.html  industry.html  jobs.html  user.html
templates/: index.html
tests/: conftest.py
tests/integration/: conftest.py  test_calculator_flow.py  test_config_flow.py  test_navigation.py
tests/unit/: test_config_logic.py  test_industry_pure.py  test_routes.py  test_tasks.py  test_utils.py
