[project]
name = "eveindyapp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv>=1.1.0",
    "python-jose>=3.4.0",
    "sqlalchemy>=2.0.40",
    "requests>=2.32.3",
    "validate-email>=1.3",
    "gunicorn>=23.0.0",
    "celery>=5.6.2",
]

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-flask>=1.3.0",
    "pytest-playwright>=0.6.2",
    "responses>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: Playwright browser tests"]
